@@ -598,7 +598,6 @@ $wgAutoloadLocalClasses = array(
 	'APCBagOStuff' => 'includes/objectcache/APCBagOStuff.php',
 	'BagOStuff' => 'includes/objectcache/BagOStuff.php',
 	'DBABagOStuff' => 'includes/objectcache/DBABagOStuff.php',
-	'eAccelBagOStuff' => 'includes/objectcache/eAccelBagOStuff.php',
 	'EhcacheBagOStuff' => 'includes/objectcache/EhcacheBagOStuff.php',
 	'EmptyBagOStuff' => 'includes/objectcache/EmptyBagOStuff.php',
 	'FakeMemCachedClient' => 'includes/objectcache/EmptyBagOStuff.php',
