@@ -153,6 +153,8 @@ production.
   was specified.
 * (bug 30368) Special:Newpages now shows the new page name for moved pages
 * (bug 1697) The way to search blocked usernames in block log should be clearer
+* (bug 29747) eAccelerator shared memory caching has been removed since it is
+  now disabled by default and is buggy. APC, XCache and WinCache are not affected.
 
 === API changes in 1.19 ===
 * (bug 19838) siprop=interwikimap can now use the interwiki cache.
